Use URI instead of deprecated URL